infrastructure/k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: pinkel.dev
      http:
        paths:
          - path: /api/user/?(.*)
            backend:
              serviceName: auth-service
              servicePort: 3000
